<resources>
    <string name="app_name">Speaking Assistant</string>
    <string name="tap_speak">Draw &amp; Speak</string>
    <string name="select_all">Select all</string>
    <string name="summary">Summary</string>
    <string name="close">Close</string>
    <string name="back">Back</string>

    <string name="app_description">
        Speaking assistant is a service to help users interact your devices with very new experience.\n
        It consists of many useful features as following\n
        1. Select all and read\n
        - Select and read all text in current screen of devices\n
        - For web, read all content in a website\n
        2. Draw and read\n
        - With some simple gesture, some rectangles will be drawns and read all text under this\n
        3. Summary\n
        - Some advanced machine learning algorithm is used to summarize long documents to save your time\n
    </string>

    <string name="app_description_2">
        Speaking assistant is a service to read all stuff displaying in your device.
        Tap or swipe your finger in an arbitrary areas to select them and hear what they are.\n\nSome advanced machine learning algorithm to summary long document and read them aloud.\n
    </string>

    <string name="title_universal_warning_msg">Speaking Assistant</string>
    <string name="turn_on_accessibility_msg">To use this application, you need to turn on Speaking Assistant in Accessibility settings.</string>
    <string name="btn_ok">@android:string/ok</string>
    <string name="btn_cancel">@android:string/cancel</string>

    <string name="text_tutorial_title">Speaking Assistant Help</string>


    <string name="text_tutorial_1">To use this application, you need turn ON Speaking Assistant in Settings.</string>

    <string name="text_tutorial_2">In Settings, find Accessibility menu.</string>

    <string name="text_tutorial_3">Scroll to bottom and find Speaking Assistant, turn it ON.</string>
    <string name="btn_tutorial_ok">Got It</string>


    <string name="text_button_description_1">Press this for enter speak menu.</string>
    <string name="text_button_description_2">Press this then drag to choose and read speak field.</string>
    <string name="text_button_description_3">Press this to read all text.</string>
    <string name="text_button_description_4">Press this to read summary text.</string>
    <string name="text_button_description_5">Press this to close speak menu.</string>
    <string name="text_button_description_6">Press this to stop speaking.</string>

    <string name="accessibility_settings">Accessibility Settings</string>
    <string name="last_speak_summary">Last Speak Summary</string>
    <string name="tutorial">Tutorial</string>

    <string name="settings">Settings</string>
    <string name="text_settings_tts_output">Display output text</string>

    <string name="all_text">All text:</string>
    <string name="summary_text">Summary:</string>

    <string name="settings_tutorial">Settings &amp; Tutorial</string>

</resources>
