<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tts_overlay_text_padding"
        android:divider="@color/icon_color"
        android:orientation="vertical">
        <TextView
            android:text="@string/text_tutorial_1"
            android:layout_margin="@dimen/tts_overlay_text_padding"
            android:layout_marginTop="@dimen/img_padding"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:background="@drawable/rectangle_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/settings1"/>
        <TextView
            android:text="@string/text_tutorial_2"
            android:layout_margin="@dimen/tts_overlay_text_padding"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:background="@drawable/rectangle_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/settings2"/>
        <TextView
            android:text="@string/text_tutorial_3"
            android:layout_margin="@dimen/tts_overlay_text_padding"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:background="@drawable/rectangle_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/accessibility"/>
        <Button
            android:id="@+id/btnOk"
            android:layout_marginTop="@dimen/tts_overlay_text_padding"
            android:layout_marginBottom="@dimen/tts_overlay_text_padding"
            android:text="@string/btn_tutorial_ok"
            android:textColor="@color/colorAccent"
            android:background="@drawable/rectangle_white"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</ScrollView>