<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/collapse_view"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/circle_white">

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/tint_color_by_lcd"
                android:backgroundTintMode="src_atop"
                android:background="@drawable/ic_play_button"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/expand_view"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/layout_lock_color"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/select_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/item_background"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:tint="@color/icon_color"
                        android:src="@drawable/ic_touch_app" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:fontFamily="sec-roboto-light"
                        android:gravity="top|center_horizontal"
                        android:includeFontPadding="true"
                        android:lineSpacingExtra="-1.0dp"
                        android:text="@string/tap_speak"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/select_all_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/item_background"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:tint="@color/icon_color"
                        android:src="@drawable/ic_all_out" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:fontFamily="sec-roboto-light"
                        android:gravity="top|center_horizontal"
                        android:includeFontPadding="true"
                        android:lineSpacingExtra="-1.0dp"
                        android:text="@string/select_all"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/summary_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/item_background"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_wrap_text"
                        android:tint="@color/icon_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:fontFamily="sec-roboto-light"
                        android:gravity="top|center_horizontal"
                        android:includeFontPadding="true"
                        android:lineSpacingExtra="-1.0dp"
                        android:text="@string/summary"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/exit_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/item_background"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:tint="@color/icon_color"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:fontFamily="sec-roboto-light"
                        android:gravity="top|center_horizontal"
                        android:includeFontPadding="true"
                        android:lineSpacingExtra="-1.0dp"
                        android:text="@string/close"
                        android:textColor="@color/textColor"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/back_view"
            android:layout_width="55dp"
            android:layout_height="56dp"
            android:background="@drawable/circle_white"
            android:gravity="center">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/background_icon_press"
                android:backgroundTintMode="src_atop"
                android:src="@drawable/ic_mic_off" />

        </LinearLayout>

        <!--  </LinearLayout> -->

</FrameLayout>